[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "spatial-kde"
version = "0.2.0"
description = "Create Spatial Kernel Density / Heatmap (as a numpy array or raster) from point based vector data"
authors = ["mblackgeo <18327836+mblackgeo@users.noreply.github.com>"]
readme = "README.md"
homepage = "https://github.com/mblackgeo/spatial-kde"
repository = "https://github.com/mblackgeo/spatial-kde"
keywords = ["raster", "vector", "kernel density", "heatmap"]
include = [
    "LICENSE",
]
packages = [{include = "spatial_kde"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
pandas = "^2.3"
geopandas = "^1.1"
rasterio = "^1.4"
Shapely = "^2.1"
pyproj = "^3.7"
numpy = "^2.3"
scipy = "^1.16"
typer = "^0.15"

[tool.poetry.group.dev.dependencies]
mypy = "^1.13"
black = "^25.1"
flake8 = "^7.1"
pylint = "^4.0"
pytest = "^8.3"
coverage = {extras = ["toml"], version = "^7.6"}
pytest-cov = "^6.0"
pre-commit = "^4.0"
isort = "^5.13"

[tool.poetry.scripts]
skde = "spatial_kde.cli:app"

[tool.coverage.paths]
source = ["spatial_kde"]

[tool.coverage.run]
branch = true
source = ["spatial_kde"]

[tool.coverage.report]
show_missing = true
# fail_under = 100

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["spatial_kde"]

# [tool.pytest.ini_options]
# testpaths = "tests"
# addopts = [
#     "--cov", "spatial_kde",
#     "--cov-report", "term-missing:skip-covered",
#     "-p", "no:warnings"
# ]
